[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/BlackHole.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0000.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0001.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0002.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0003.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0004.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0005.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0006.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0007.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0008.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Weapons/BlackHole/frame0009.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 96.0

[node name="BlackHole" type="Node2D"]

show_behind_parent = true
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Breaker" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"

[node name="Area2D" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = true

[node name="Done" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Done" to="." method="_on_Done_timeout"]


